--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.hikari.maximum-pool-size=4
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
+spring.datasource.username=beobsik
+spring.datasource.password=pass
